--- a/Example06Model.Platform/UniversalWindows/App.xaml
+++ b/Example06Model.Platform/UniversalWindows/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="Example.App"
+    x:Class="Example06Model.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Example06Model"
